<resources>
    <string name="app_name">Android-app-Fast-and-Feast</string>
    <string name="app_title">Fast and Feast</string>
    <string name="delivery_logo">Image: delivery_logo</string>
    <string name="app_description">Best delivery service</string>
    <string name="see_restaurants">See the restaurants</string>
    <string name="restaurants">Restaurants</string>
    <string name="main_register_message">Register</string>
    <string name="main_log_in_message">Log in</string>
    <string name="add_review">Add review</string>
    <string name="menus">Menus</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="menu_add">Add</string>
    <string name="write_review">Write review</string>
    <string name="confirm_order_message">Your order has been sent. You will be redirected to the user page…</string>
    <string name="register_existing_account">Already have an account? Log in here</string>
    <string name="create_account">Create Account</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="welcome_username">Welcome, username</string>
    <string name="phone">Phone</string>
    <string name="payment">Payment</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string-array name="products">
        <item>Saorma</item>
        <item>Burger</item>
        <item>Suc</item>
        <item>Mincu</item>
    </string-array>
    <string-array name="description">
        <item>Facut cu lacrimile studentilor</item>
        <item>Facut cu lacrimile studentilor</item>
        <item>Facut cu lacrimile studentilor</item>
        <item>Facut cu lacrimile studentilor</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LogOut</string>
    <string-array name="restaurants">
        <item>La Gigel</item>
        <item>La Cornel</item>
        <item>La Mincu</item>
        <item>New gardens</item>
    </string-array>
    <string-array name="menus">
        <item>Shaorma</item>
        <item>Cartofi</item>
        <item>Fasole</item>
        <item>Ciolan</item>
        <item>Plansul studentilor</item>
        <item>Suferinta studentilor</item>
        <item>Coq au vin</item>
        <item>Cassoulet</item>
    </string-array>
    <string-array name="descriptionFirebase">
        <item>Cartofi,Varza,Carne de porc</item>
        <item>Cartofi cu sare</item>
        <item>Fasole care nu merge fara ciolan</item>
        <item>Ciolan care nu merge fara fasole</item>
        <item>Lacrimile studentilor</item>
        <item>Durerea studentilor</item>
        <item>Mancare franceza cu vin</item>
        <item>Echivalentul in romana la fasole cu ciolan</item>
    </string-array>
</resources>