<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_app_title_and_logo"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:id="@+id/main_app_title_and_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:id="@+id/main_app_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_title"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/main_app_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_description"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/main_logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/delivery_logo"
            android:src="@drawable/delivery_logo" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/main_btn_see_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F4B872"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/main_login_and_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_app_title_and_logo"
        app:layout_constraintVertical_bias="0.8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/restaurants"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/main_login_and_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <TextView
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/main_log_in_message"
            android:textColor="@color/white"
            android:textSize="15sp"

            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/main_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_register_message"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>