<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UserPageActivity"
    android:id="@+id/user_page_relative_layout">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="382dp"
        android:layout_height="143dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="37dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:id="@+id/user_page_username"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="47dp"
        android:text="@string/welcome_username"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/user_page_address"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="90dp"
        android:drawableLeft="@drawable/ic_action_adress"
        android:text="@string/address"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_page_phone"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="117dp"
        android:drawableLeft="@drawable/ic_action_phone"
        android:text="@string/phone"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_page_payment"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="145dp"
        android:drawableLeft="@drawable/ic_action_payment"
        android:text="@string/payment"
        android:textSize="18sp" />

    <com.hitomi.cmlibrary.CircleMenu
        android:id="@+id/user_page_circle_menu"
        android:layout_width="397dp"
        android:layout_height="417dp"
        app:layout_constraintVertical_bias = ".7"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp" />

    <fragment
        android:id="@+id/fragment_logout"
        android:name="com.example.android_app_fast_and_feast.LogoutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_page_circle_menu"
        />
</RelativeLayout>